<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

<com.balysv.materialripple.MaterialRippleLayout
    android:id="@+id/epLayout"
    style="@style/RippleStyleBlack"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:minHeight="?attr/actionBarSize"
        android:orientation="horizontal"
        android:focusable="true">

        <ImageView
            android:id="@+id/epcover"
            android:layout_width="123dp"
            android:layout_height="71dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/spacing_middle"
            android:layout_marginEnd="@dimen/padding_10"
            android:scaleType="fitCenter"
            android:contentDescription="@string/image" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/spacing_middle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="3dp">

                    <TextView
                        android:id="@+id/epnumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/spacing_middle"
                        android:text="@string/ep_n"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                        android:textColor="@color/grey_11"
                        android:textSize="14sp" />


                    <TextView
                        android:id="@+id/eptitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/spacing_middle"
                        android:textStyle="bold"
                        android:text="@string/title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                        android:textColor="@color/grey_11"
                        android:textSize="14sp" />


                </LinearLayout>


            </LinearLayout>


            <TextView
                android:id="@+id/epoverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_middle"
                android:maxLines="4"
                android:text="@string/movie_overview_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                android:textSize="10sp" />


        </LinearLayout>


    </LinearLayout>




</com.balysv.materialripple.MaterialRippleLayout>


</layout>