<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/upgrade_background"
    android:orientation="vertical">



    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/form_container"
        android:layout_width="330dp"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/spacing_large">

        <View
            android:layout_width="0dp"
            android:layout_marginBottom="40dp"
            android:layout_height="@dimen/spacing_middle" />


        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_large" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_middle" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:id="@+id/logo_image_top"
                android:layout_width="100dp"
                android:tint="@color/grey_11"
                android:layout_height="30dp"
                android:contentDescription="@string/image" />
        </LinearLayout>


        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_large" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginBottom="40dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textColor="@color/white"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textColor="@color/grey_11"
                android:textSize="14sp"
                android:layout_marginBottom="20dp"
                android:theme="@style/EditText.Orange" />

        </com.google.android.material.textfield.TextInputLayout>



        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_mlarge" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_marginBottom="40dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/main_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/grey_11"
                android:textSize="14sp"
                android:theme="@style/EditText.Orange" />

        </com.google.android.material.textfield.TextInputLayout>


        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_middle" />





        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:background="@drawable/btn_gradient"
            android:text="@string/login"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />





        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="horizontal">



            <TextView
                android:id="@+id/go_to_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"

                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textColor="@color/grey_11" />


        </LinearLayout>


        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_xlarge" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/copyright"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/grey_40" />

        </LinearLayout>

    </LinearLayout>




</RelativeLayout>
